Updated theme color

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                     <h1 class="white  lh-2 md-fs-l1 md-lh-1 fw-900 ">Lost In Chernarus</h1>
                 </a>
                 <a data-toggle="toggle-nav" data-target="#nav-items" href="#"
-                    class="flex items-center ml-auto md-hidden green-lighter opacity-50 hover-opacity-100 ease-300 p-1 m-3">
+                    class="flex items-center ml-auto md-hidden red-lighter opacity-50 hover-opacity-100 ease-300 p-1 m-3">
                     <i data-feather="menu"></i>
                 </a>
             </div>
             <div id="nav-items"
                 class="hidden flex sm-w-100pc flex-column md-flex md-flex-row md-justify-end items-center">
-                <a href="#about" class="fs-m2 mx-3 py-3 green no-underline hover-underline">About</a>
-                <a href="#features" class="fs-m2 mx-3 py-3 green no-underline hover-underline">Features</a>
-                <a href="#documentation" class="fs-m2 mx-3 py-3 green no-underline hover-underline">Documentation</a>
-                <a href="#blog" class="fs-m2 mx-3 py-3 green no-underline hover-underline">News</a>
-                <a href="#" class="fs-m1 button bg-green black fw-800 no-underline mx-5">Download</a>
+                <a href="#about" class="fs-m2 mx-3 py-3 red no-underline hover-underline">About</a>
+                <a href="#features" class="fs-m2 mx-3 py-3 red no-underline hover-underline">Features</a>
+                <a href="#documentation" class="fs-m2 mx-3 py-3 red no-underline hover-underline">Documentation</a>
+                <a href="#blog" class="fs-m2 mx-3 py-3 red no-underline hover-underline">News</a>
+                <a href="#" class="fs-m1 button bg-red black fw-800 no-underline mx-5">Download</a>
             </div>
             <div style="position: fixed; z-index: -99; width: 100%; height: 100%; left: 0; top: 0;">
                 <iframe frameborder="0" height="100%" width="100%"
@@ -47,8 +47,8 @@
         <!-- hero section -->
         <section id="about" class="min-h-100vh flex justify-start items-center">
             <div class="mx-5 md-mx-l5">
-                <div class="inline-block br-round bg-green-10 green-lightest p-2 fs-s2 mb-5">
-                    <div class="inline-block bg-green green-lightest br-round px-4 py-1 mr-2 ml-2 fs-s3">UPDATE</div>
+                <div class="inline-block br-round bg-red-10 red-lightest p-2 fs-s2 mb-5">
+                    <div class="inline-block bg-red red-lightest br-round px-4 py-1 mr-2 ml-2 fs-s3">UPDATE</div>
                     Lost In Chernarus Version 0.1.1 is now live!
                 </div>
                 <div>
@@ -62,30 +62,30 @@
         <div class="flex flex-column md-flex-row mx-auto">
             <div class="w-100pc md-w-40pc">
                 <div class="br-8 p-5 m-5">
-                    <div class="flex justify-center items-center bg-green-lightest-10 white w-l5 h-l5 br-round mb-5"><i
+                    <div class="flex justify-center items-center bg-red-lightest-10 white w-l5 h-l5 br-round mb-5"><i
                             data-feather="inbox" class="w-l5"></i></div>
                     <h4 class="white fw-600 fs-m3 mb-5">Hardcore Gameplay</h4>
-                    <div class="green-lightest fw-600 fs-m1 lh-3 opacity-50">Lorem ipsum dolor sit amet, consectetur
+                    <div class="red-lightest fw-600 fs-m1 lh-3 opacity-50">Lorem ipsum dolor sit amet, consectetur
                         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
 
                 </div>
             </div>
             <div class="w-100pc md-w-40pc">
                 <div class="br-8 p-5 m-5">
-                    <div class="flex justify-center items-center bg-green-lightest-10 white w-l5 h-l5 br-round mb-5"><i
+                    <div class="flex justify-center items-center bg-red-lightest-10 white w-l5 h-l5 br-round mb-5"><i
                             data-feather="cpu" class="w-l5"></i></div>
                     <h4 class="white fw-600 fs-m3 mb-5">Improved Mechanics</h4>
-                    <div class="green-lightest fw-600 fs-m1 opacity-50">Lorem ipsum dolor sit amet, consectetur
+                    <div class="red-lightest fw-600 fs-m1 opacity-50">Lorem ipsum dolor sit amet, consectetur
                         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
 
                 </div>
             </div>
             <div class="w-100pc md-w-40pc">
                 <div class="br-8 p-5 m-5">
-                    <div class="flex justify-center items-center bg-green-lightest-10 white w-l5 h-l5 br-round mb-5"><i
+                    <div class="flex justify-center items-center bg-red-lightest-10 white w-l5 h-l5 br-round mb-5"><i
                             data-feather="database" class="w-l5"></i></div>
                     <h4 class="white fw-600 fs-m3 mb-5">Modifiable</h4>
-                    <div class="green-lightest fw-600 fs-m1 opacity-50">Lorem ipsum dolor sit amet, consectetur
+                    <div class="red-lightest fw-600 fs-m1 opacity-50">Lorem ipsum dolor sit amet, consectetur
                         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
 
                 </div>
@@ -94,34 +94,34 @@
     </section>
 
     <!-- slider -->
-    <section class="relative bg-green-darkest-90">
+    <section class="relative bg-red-darkest-90">
         <div id="slider-1">
             <div class="p-10 md-p-l10 flex justify-center items-center flex-column text-center">
                 <h2 class="white fs-l3 fw-900">Report issues and provide feedback on GitHub
                 </h2>
-                <p class="green-lightest fw-600 fs-m1 opacity-30 my-5">Lorem ipsum dolor sit amet, consectetur
+                <p class="red-lightest fw-600 fs-m1 opacity-30 my-5">Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit, sed do eiusmod tempor </p>
-                <a href="#" class="button-md bg-green white fs-s3 br-4 black fw-600 no-underline m-5">BUY NOW</a>
+                <a href="#" class="button-md bg-red white fs-s3 br-4 black fw-600 no-underline m-5">BUY NOW</a>
             </div>
             <div class="p-10 md-p-l10 flex justify-center items-center flex-column text-center">
                 <h2 class="white fs-l3 fw-900">Lorem ipsum dolor sit amet, consectetur</h2>
-                <p class="green-lightest fw-600 fs-m1 opacity-30 my-5">Lorem ipsum dolor sit amet, consectetur
+                <p class="red-lightest fw-600 fs-m1 opacity-30 my-5">Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit, sed do eiusmod tempor </p>
-                <a href="#" class="button-md bg-green white fs-s3 br-4 black fw-600 no-underline m-5">BUY NOW</a>
+                <a href="#" class="button-md bg-red white fs-s3 br-4 black fw-600 no-underline m-5">BUY NOW</a>
             </div>
             <div class="p-10 md-p-l10 flex justify-center items-center flex-column text-center">
                 <h2 class="white fs-l3 fw-900">Lorem ipsum dolor sit amet, consectetur</h2>
-                <p class="green-lightest fw-600 fs-m1 opacity-30 my-5">Lorem ipsum dolor sit amet, consectetur
+                <p class="red-lightest fw-600 fs-m1 opacity-30 my-5">Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit, sed do eiusmod tempor </p>
-                <a href="#" class="button-md bg-green white fs-s3 br-4 black fw-600 no-underline m-5">BUY NOW</a>
+                <a href="#" class="button-md bg-red white fs-s3 br-4 black fw-600 no-underline m-5">BUY NOW</a>
             </div>
         </div>
         <ul class="absolute list-none w-100pc flex justify-between top-50pc">
             <li><button
-                    class="prev ml-10 br-round border-green-lightest green-lightest  bg-transparent flex justify-center items-center p-2 focus-green-lighter outline-none"><i
+                    class="prev ml-10 br-round border-red-lightest red-lightest  bg-transparent flex justify-center items-center p-2 focus-red-lighter outline-none"><i
                         data-feather="chevron-left"></i></button></li>
             <li><button
-                    class="next mr-10 br-round border-green-lightest green-lightest  bg-transparent flex justify-center items-center p-2  focus-green-lighter outline-none"><i
+                    class="next mr-10 br-round border-red-lightest red-lightest  bg-transparent flex justify-center items-center p-2  focus-red-lighter outline-none"><i
                         data-feather="chevron-right"></i></button></li>
         </ul>
     </section>
@@ -130,7 +130,7 @@
     <section class="p-10 md-py-10 bg-black">
         <div class="w-100pc md-w-70pc mx-auto py-10">
             <h2 class="white fs-l2 md-fs-xl1 fw-900 lh-2">
-                Lorem ipsum dolor sit amet, <span class="border-b bc-green bw-4"> consectetur</span> adipiscing elit,
+                Lorem ipsum dolor sit amet, <span class="border-b bc-red bw-4"> consectetur</span> adipiscing elit,
                 sed do eiusmod tempor </h2>
         </div>
     </section>
@@ -139,20 +139,20 @@
     <section class="py-l10 bg-black">
         <div class="flex flex-column md-flex-row md-w-80pc mx-auto">
             <div class="w-100pc md-w-50pc">
-                <div class="br-8 p-5 m-5 bg-green-lightest-10 pointer hover-scale-up-1 ease-300">
-                    <div class="inline-block bg-green green-lightest br-3 px-4 py-1 mb-10 fs-s4 uppercase">
+                <div class="br-8 p-5 m-5 bg-red-lightest-10 pointer hover-scale-up-1 ease-300">
+                    <div class="inline-block bg-red red-lightest br-3 px-4 py-1 mb-10 fs-s4 uppercase">
                         individual</div>
-                    <div class="green-lightest fw-600 fs-m1">Lorem ipsum <span class="opacity-30"> dolor sit amet,
+                    <div class="red-lightest fw-600 fs-m1">Lorem ipsum <span class="opacity-30"> dolor sit amet,
                             consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                             aliqua.</span> </div>
                     <a href="#" class="mt-10 button bg-black fs-s3 white no-underline">Read</a>
                 </div>
             </div>
             <div class="w-100pc md-w-50pc">
-                <div class="br-8 p-5 m-5 bg-green-lightest-10  pointer hover-scale-up-1 ease-300">
-                    <div class="inline-block bg-green green-lightest br-3 px-4 py-1 mb-10 fs-s4 uppercase">
+                <div class="br-8 p-5 m-5 bg-red-lightest-10  pointer hover-scale-up-1 ease-300">
+                    <div class="inline-block bg-red red-lightest br-3 px-4 py-1 mb-10 fs-s4 uppercase">
                         team</div>
-                    <div class="green-lightest fw-600 fs-m1">Lorem ipsum <span class="opacity-30"> dolor sit amet,
+                    <div class="red-lightest fw-600 fs-m1">Lorem ipsum <span class="opacity-30"> dolor sit amet,
                             consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                             aliqua.</span> </div>
                     <a href="#" class="mt-10 button bg-black fs-s3 white no-underline">Read</a>
@@ -167,61 +167,61 @@
     <section class="p-10 md-p-l5 bg-black">
         <div id="slider-2">
             <div class="px-3">
-                <div class="p-8 br-8 bg-green-lightest-10 relative">
+                <div class="p-8 br-8 bg-red-lightest-10 relative">
                     <span class="fs-l5 lh-1 white opacity-10 absolute top-0 z--1">&#10077;</span>
-                    <p class="fw-600 fs-m1 green-lightest opacity-80 italic ls-wider">Lost In Chernarus is a lot of fun
+                    <p class="fw-600 fs-m1 red-lightest opacity-80 italic ls-wider">Lost In Chernarus is a lot of fun
                         and improves DayZ a lot!</p>
                     <div class="flex items-center my-5">
                         <div class="block br-round border bc-black bw-4 w-l3 h-l3"><img class="br-round"
                                 src="https://randomuser.me/api/portraits/men/46.jpg" alt=""></div>
                         <div class="ml-4 fs-s1">
-                            <div class="green-lightest">John Doe</div>
-                            <div class="green-lightest opacity-20">YouTube Content Creator</div>
+                            <div class="red-lightest">John Doe</div>
+                            <div class="red-lightest opacity-20">YouTube Content Creator</div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="px-3">
-                <div class="p-8 br-8 bg-green-lightest-10 relative">
+                <div class="p-8 br-8 bg-red-lightest-10 relative">
                     <span class="fs-l5 lh-1 white opacity-10 absolute top-0 z--1">&#10077;</span>
-                    <p class="fw-600 fs-m1 green-lightest opacity-80 italic ls-wider">Lost In Chernarus is a lot of fun
+                    <p class="fw-600 fs-m1 red-lightest opacity-80 italic ls-wider">Lost In Chernarus is a lot of fun
                         and improves DayZ a lot!</p>
                     <div class="flex items-center my-5">
                         <div class="block br-round border bc-black bw-4 w-l3 h-l3"><img class="br-round"
                                 src="https://randomuser.me/api/portraits/men/46.jpg" alt=""></div>
                         <div class="ml-4 fs-s1">
-                            <div class="green-lightest">Jon Doe</div>
-                            <div class="green-lightest opacity-20">YouTube Content Creator</div>
+                            <div class="red-lightest">Jon Doe</div>
+                            <div class="red-lightest opacity-20">YouTube Content Creator</div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="px-3">
-                <div class="p-8 br-8 bg-green-lightest-10 relative">
+                <div class="p-8 br-8 bg-red-lightest-10 relative">
                     <span class="fs-l5 lh-1 white opacity-10 absolute top-0 z--1">&#10077;</span>
-                    <p class="fw-600 fs-m1 green-lightest opacity-80 italic ls-wider">Lost In Chernarus is a lot of fun
+                    <p class="fw-600 fs-m1 red-lightest opacity-80 italic ls-wider">Lost In Chernarus is a lot of fun
                         and improves DayZ a lot!</p>
                     <div class="flex items-center my-5">
                         <div class="block br-round border bc-black bw-4 w-l3 h-l3"><img class="br-round"
                                 src="https://randomuser.me/api/portraits/men/46.jpg" alt=""></div>
                         <div class="ml-4 fs-s1">
-                            <div class="green-lightest">Jon Doe</div>
-                            <div class="green-lightest opacity-20">YouTube Content Creator</div>
+                            <div class="red-lightest">Jon Doe</div>
+                            <div class="red-lightest opacity-20">YouTube Content Creator</div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="px-3">
-                <div class="p-8 br-8 bg-green-lightest-10 relative">
+                <div class="p-8 br-8 bg-red-lightest-10 relative">
                     <span class="fs-l5 lh-1 white opacity-10 absolute top-0 z--1">&#10077;</span>
-                    <p class="fw-600 fs-m1 green-lightest opacity-80 italic ls-wider">Lost In Chernarus is a lot of fun
+                    <p class="fw-600 fs-m1 red-lightest opacity-80 italic ls-wider">Lost In Chernarus is a lot of fun
                         and improves DayZ a lot!</p>
                     <div class="flex items-center my-5">
                         <div class="block br-round border bc-black bw-4 w-l3 h-l3"><img class="br-round"
                                 src="https://randomuser.me/api/portraits/men/46.jpg" alt=""></div>
                         <div class="ml-4 fs-s1">
-                            <div class="green-lightest">Jon Doe</div>
-                            <div class="green-lightest opacity-20">YouTube Content Creator</div>
+                            <div class="red-lightest">Jon Doe</div>
+                            <div class="red-lightest opacity-20">YouTube Content Creator</div>
                         </div>
                     </div>
                 </div>
@@ -235,25 +235,25 @@
 
     <!-- subscribe -->
     <section class="p-10 md-p-l5 bg-black">
-        <div class="br-8 bg-green-lightest-10 p-5 md-p-l5 flex flex-wrap md-justify-between md-items-center">
+        <div class="br-8 bg-red-lightest-10 p-5 md-p-l5 flex flex-wrap md-justify-between md-items-center">
             <div class="w-100pc md-w-50pc">
                 <h2 class="white fs-m4 fw-800">Play Lost In Chernaus Now!</h2>
-                <p class="fw-600 green-lightest opacity-40">Find a server that runs the mod by checking out the server
+                <p class="fw-600 red-lightest opacity-40">Find a server that runs the mod by checking out the server
                     list.</p>
             </div>
             <div class="w-100pc md-w-50pc">
                 <div class="flex justify-center">
-                    <button class=" button-lg bg-green black fw-800 fs-m1 br-3">VIEW ALL SERVERS</button>
+                    <button class=" button-lg bg-red black fw-800 fs-m1 br-3">VIEW ALL SERVERS</button>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- footer -->
-    <footer class="p-5 bg-green">
+    <footer class="p-5 bg-red">
         <div class="flex flex-wrap text-center">
             <div class="md-w-100pc mb-10">
-                <div class="green-darkest fs-s1 mt-4 md-pr-10">
+                <div class="red-darkest fs-s1 mt-4 md-pr-10">
                     <p>Copyright 2021 - Lost In Cherarus Mod Team</p>
                     <p><a target="blank" href="https://github.com/bansal/hook-theme">Website template</a> by bansal</p>
                 </div>
